Bug 169637 - The background of Page Size dropdown in Tabbed UI's Layout became transparent (kf6, gen)
Summary: The background of Page Size dropdown in Tabbed UI's Layout became transparent...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Noel Grandin
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-11-23 17:53 UTC by Buovjaga
Modified: 2025-11-27 21:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot with qt6 VCL plugin (40.14 KB, image/png)
2025-11-24 08:45 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2025-11-23 17:53:32 UTC
1. Change Writer to Tabbed UI from View - User Interface
2. Click Layout and Page Size

Bibisected with linux-64-26.2 to 943814bf72181b3592e58d64ffa07358633d9ee7
fix gen backend under 'make vcl.check'

Adding Michael W., maybe he has ideas about the kf6 side as Noel's commit notes:
"Sadly this does not fix any of the rendering
issues with the gen backend, because raw X11
cannot handle alpha at all. Fixing the rendering
issues would likely require using the XRender
API."

I note that on Windows, the same dropdown became black in 088a7c7c451321a800ca8d3523a18b6bb93239b7
remove alpha device from OutputDevice
Comment 1 Michael Weghorn 2025-11-24 08:45:30 UTC
Created attachment 204243 [details]
Screenshot with qt6 VCL plugin
Comment 2 Michael Weghorn 2025-11-24 08:49:07 UTC
For me, with qt6, it's not really transparent (as the title says), but some kind of grey (but which doesn't match the rest of the popup color, so looks like a bug indeed).

(In reply to Buovjaga from comment #0)
> Adding Michael W., maybe he has ideas about the kf6 side as Noel's commit
> notes:
> "Sadly this does not fix any of the rendering
> issues with the gen backend, because raw X11
> cannot handle alpha at all. Fixing the rendering
> issues would likely require using the XRender
> API."

That commit looks unrelated for kf6, as it only changes code specific to the gen VCL plugin.

In fact, bibisecting for kf5 (which should be affected the same way as kf6) points to the same commit as the Windows one you mention:

> I note that on Windows, the same dropdown became black in
> 088a7c7c451321a800ca8d3523a18b6bb93239b7
> remove alpha device from OutputDevice

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 7feaf13cb6c73edf201a6653faa9b839bbd33493
CPU threads: 32; OS: Linux 6.17; UI render: default; VCL: qt6 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 3 Michael Weghorn 2025-11-24 09:50:07 UTC
(In reply to Michael Weghorn from comment #2)
> For me, with qt6, it's not really transparent (as the title says), but some
> kind of grey (but which doesn't match the rest of the popup color, so looks
> like a bug indeed).

It actually *is* transparent, I just didn't notice that gray background was actually the gray area around the Writer doc. It looks more weird when the popup opens above the actual document.
Comment 4 Michael Weghorn 2025-11-24 09:53:59 UTC
Drawing happens in ValueSetWithTextControl::UserDraw, which explicitly sets COL_TRANSPARENT for the background (and used to do so before Noel's commit, it just didn't actually show up as transparent).

I'll check where else is this control is used and what might be a better choice.
Comment 5 Noel Grandin 2025-11-24 09:57:07 UTC
I have a possible fix for the background issue at
    https://gerrit.libreoffice.org/c/core/+/194426

But I note that, at least on windows, the rendering of this specific control is pretty bad. The borders and surrounds do not look good, and the selection coloring is weird.
Comment 6 Michael Weghorn 2025-11-24 10:25:53 UTC
(In reply to Noel Grandin from comment #5)
> I have a possible fix for the background issue at
>     https://gerrit.libreoffice.org/c/core/+/194426

Nice!

> But I note that, at least on windows, the rendering of this specific control
> is pretty bad. The borders and surrounds do not look good, and the selection
> coloring is weird.

I think reducing the amount of custom controls/logic might be a good idea in general, maybe in the context of tdf#163988 eventually one day - unless anybody is interested in improving that earlier.

(Another thing noticed in a quick test is that the control also can't be operated using the keyboard only.)
Comment 7 Commit Notification 2025-11-24 16:46:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30eb1cf0bd27fc58b34b8f4f14c7d26499cbc50f

tdf#169637 background of Page Size dropdown in Tabbed UI wrong

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2025-11-24 19:37:41 UTC
Verified, thanks.

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ef9daaea93839495d22dc53b3f7b46e304d98a04
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: x11
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 9 Michael Weghorn 2025-11-27 21:40:58 UTC
(In reply to Michael Weghorn from comment #6)
> I think reducing the amount of custom controls/logic might be a good idea in
> general, maybe in the context of tdf#163988 eventually one day - unless
> anybody is interested in improving that earlier.

FYI: Pending change series to switch from that custom control to a weld::TreeView and drop ValueSetWithTextControl altogether:
https://gerrit.libreoffice.org/c/core/+/194743