tdf#169637 background of Page Size dropdown in Tabbed UI wrong

regression from
    commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Sep 24 16:18:11 2024 +0200
    remove alpha device from OutputDevice

Change-Id: I4d4f0049929385da4143be269e5aa52cd720ec81
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194426
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>